objects/project_cloud__Project_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Milestone is complete</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Date__c</fullName>
        <description>The date the Milestone was completed</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>A more in detail description of the Milestone and what impacts it has</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Due_Date__c</fullName>
        <description>The expected date for the Milestone to be complete on the project</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Milestone_Performance__c</fullName>
        <description>How many days early or late the Milestone was completed (minus numbers indicate early completion)</description>
        <formula>project_cloud__Completed_Date__c - project_cloud__Due_Date__c</formula>
        <label>Milestone Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Milestone_Process_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Milestone Process Step</label>
        <referenceTo>project_cloud__Milestone_Process_Step__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Related_Record_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when completion of the Milestone is controlled by the related ‘Timeline’ records (Phases, Sprints, Tasks or Cards)</description>
        <label>Related Record Control</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>